--- a/sinatra/app/views/dashboard/index.erb
+++ b/sinatra/app/views/dashboard/index.erb
@@ -1,43 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 
-    
-    <script type="text/javascript" src="javascript/script.js"></script>
-    
-    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
-    <style>
-			{
-				background-color:#BCDFDB;
-				color: #025C7F;
-				font-family:verdana,arial;
-			}
-			#quotes
-			{
-				margin:0;
-				padding:100px;
-				font-size:20px;
-				position:relative;
-			}
-			.textItem
-			{
-				position:absolute;
-				display:none;
-			}
-			a
-			{
-				color:#000;
-				font-size:15px;
-			}
-    </style>
-
-
 </head>
-
-
-
-
 
 
 
@@ -61,10 +26,43 @@
   </div>
 
 
-  <div id="quotes"><h3><%= @sentences[49] %>"</h3><div class="textItem">
+<div id="quotes">
+  <div class="textItem"><%= @sentences[49] %></div>
 
-  <div id="quotes"><h3><%= @sentences[80] %>"</h3><div class="textItem">
+  <div class="textItem"><%= @sentences[55] %></div>
 
-  <div id="quotes"><h3><%= @sentences[120] %>"</h3><div class="textItem">
+  <div class="textItem"><%= @sentences[75] %></div>
+</div
 
-
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+		<script type="text/javascript">
+			$(document).ready(function()
+			{
+				setupRotator();
+			});	
+			function setupRotator()
+			{
+				if($('.textItem').length > 1)
+				{
+					$('.textItem:first').addClass('current').fadeIn(1000);
+					setInterval('textRotate()', 3000);
+				}
+			}
+			function textRotate()
+			{
+				var current = $('#quotes > .current');
+				if(current.next().length == 0)
+				{
+					current.removeClass('current').fadeOut(1000);
+					$('.textItem:first').addClass('current').fadeIn(1000);
+				}
+				else
+				{
+					current.removeClass('current').fadeOut(1000);
+					current.next().addClass('current').fadeIn(1000);
+				}
+			}
+		</script>
+	</body>
+</html>
+  
