--- a/sinatra/app/views/dashboard/index.erb
+++ b/sinatra/app/views/dashboard/index.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+ 
 </head>
 
 
@@ -25,6 +25,8 @@
     </p>
   </div>
 
+<div class="probability">
+  <p><a href="/dashboard/prob">Probability Check</a></p>
 
 <div id="quotes">
   <div class="textItem"><%= @sentences[49] %></div>
