--- a/sinatra/app/views/layout.erb
+++ b/sinatra/app/views/layout.erb
@@ -8,12 +8,12 @@
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="./script.js"></script>
     
     <title>LHL Midterm Project</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Catamaran:400' rel='stylesheet' type='text/css'>
     <!-- Custom CSS -->
     <style>
@@ -71,7 +71,7 @@
         <!-- /.container -->
     </nav>
 
-  <%= yield %>
+      <%= yield %>
   
   
       <div class="footer">
