id3 machine learning added

--- a/sinatra/app/views/dashboard/index.erb
+++ b/sinatra/app/views/dashboard/index.erb
@@ -27,6 +27,8 @@
 
 <div class="probability">
   <p><a href="/dashboard/prob">Probability Check</a></p>
+  <p><a href="/dashboard/machine">Understanding Revenue Patterns</a></p>
+</div>
 
 <div id="quotes">
   <div class="textItem"><%= @sentences[49] %></div>
