register page css formatting

--- a/sinatra/app/views/layout.erb
+++ b/sinatra/app/views/layout.erb
@@ -52,7 +52,7 @@
                         <a href="#">Contact</a>
                     </li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
+                <!-- <ul class="nav navbar-nav navbar-right">
                    <form action="/login" method="post" class="navbar-form"  id="register-form" novalidate="novalidate" role="form">
                      <div class="form-group">
                      <label class="sr-only" for="username">User Name:</label>               
@@ -65,7 +65,7 @@
                      <button type="submit" class="button">Sign In</button>
                      <button type="submit" class="button"><a href="/register">Register</a></button>
                   </form>                  
-               </ul>
+               </ul> -->
             </div>
         </div>
         <!-- /.container -->
