--- a/sinatra/app/views/index.erb
+++ b/sinatra/app/views/index.erb
@@ -37,9 +37,52 @@
 
 <body>
 
+<!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">                  
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#">insightER</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Services</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                   <form action="/login" method="post" class="navbar-form"  id="register-form" novalidate="novalidate" role="form">
+                     <div class="form-group">
+                     <label class="sr-only" for="username">User Name:</label>               
+                     <input type="text" name="username" class="form-control" id="username" placeholder="Enter User Name" required>
+                     </div>
+                     <div class="form-group">
+                     <label class="sr-only"for="password-field">Password:</label>               
+                     <input type="password" name="password" class="form-control" id="pwd" placeholder="Enter Password">
+                     </div>
+                     <button type="submit" class="button">Sign In</button>
+                     <button type="submit" class="button"><a href="/register">Register</a></button>
+                  </form>                  
+               </ul>
+            </div>
+        </div>
         <!-- /.container -->
-    </nav>
-    <div class="container">
+    </nav>    <div class="container">
       <div class="row">
       
     </div>
@@ -78,11 +121,13 @@
             <div class="col-lg-12">
                 
                 <h1><em>insightER</em></h1>
-                <p><em>Competitive information for the small business.</em></p>
+                <p><em>Competitive intelligence for small businesses.</em></p>
             </div>
             <div class="col-lg-12">
-                <p>Peach puts the competitive intelligence capabilities of big business in the hands of mom and pop        
-                    operations. With access to our proprietary modeling software, you'll get current information about<br/> what your competitors are doing and what you can do about it. This analysis can be specific to your neighborhood as well as provide overall industry trends. 
+                <p>insightER puts the competitive intelligence capabilities of big business in the hands of small businesses. 
+                &nbsp;With access to our proprietary modeling software, you'll get current information about<br/> 
+                what your competitors are doing and what you can do about it. &nbsp;This analysis can be specific 
+                to your neighborhood as well as provide overall industry trends. 
                 </p>
             </div>
             <div class="col-lg-12">
@@ -95,8 +140,9 @@
                   <li>Use of promotions to increase your sales</li>
                 </ul>
             </div>
-            </div> 
-        </div>
+        </div> 
+    </div>
+
         <!-- /.row -->
 
     <!--</div>-->
